<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home_page"/>
        <item
            android:id="@+id/nav_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_communities"
            android:title="@string/communities" />

        <item
            android:id="@+id/nav_map"
            android:title="@string/map" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>