<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp">

        <EditText
            android:id="@+id/registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_oval"
            android:padding="12sp"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/registration_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_oval"
            android:padding="12sp"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/number" />

        <EditText
            android:id="@+id/registration_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_oval"
            android:padding="12sp"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_oval"
            android:padding="12sp"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_oval"
            android:padding="12sp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#7bd298"
            android:layout_marginHorizontal="12dp"
            android:text="@string/register" />
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_sign_in"
            android:textSize="16sp"
            android:textColor="#000000"
            android:gravity="center"
            android:padding="10dp"/>

    </LinearLayout>
</ScrollView>