<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

<!--    <LinearLayout-->
<!--        android:id="@+id/top_header"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="top"-->
<!--        android:gravity="end"-->
<!--        android:orientation="horizontal">-->

<!--        <TextView-->
<!--            android:id="@+id/next_event"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/left_panel"-->
<!--            android:text="Oraza, 1 kun qaldy"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:textSize="20sp" />-->

<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_marginVertical="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fajr"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fajr"
                android:textSize="22sp"
                android:padding="8dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/left_panel"
                android:background="@drawable/rounded_background"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/quran_button"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:text="@string/quran"
                    android:textSize="20sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/left_panel"

                    android:backgroundTint="@android:color/transparent"
                    android:background="@drawable/rounded_background"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_marginVertical="1dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dhuhr"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dhuhr"
                android:textSize="22sp"
                android:padding="8dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/left_panel"
                android:background="@drawable/rounded_background"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/quote_button"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:text="@string/quote"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:layout_margin="4dp"
                    android:textColor="@color/left_panel"
                    android:background="@drawable/rounded_background"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_marginVertical="1dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/asr"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/asr"
                android:textSize="22sp"
                android:padding="8dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/left_panel"

                android:background="@drawable/rounded_background"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/zikr_button"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:text="@string/zikr"
                    android:textSize="20sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/left_panel"

                    android:background="@drawable/rounded_background"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_marginVertical="1dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/maghrib"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/maghrib"
                android:textSize="22sp"
                android:padding="8dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/left_panel"

                android:background="@drawable/rounded_background"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/books_button"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:text="@string/books"
                    android:textSize="20sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/left_panel"

                    android:background="@drawable/rounded_background"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_marginVertical="1dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/isha"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/isha"
                android:textSize="22sp"
                android:padding="8dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/left_panel"

                android:background="@drawable/rounded_background"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/compass_button"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:text="@string/compass"
                    android:textSize="20sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/left_panel"

                    android:background="@drawable/rounded_background"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/set_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Поставить будильник на следующий намаз" />
    </LinearLayout>
</FrameLayout>